# agro-mvp

./: .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  project.json  pyproject.toml  requirements.txt
apps/api/: .env.example  Dockerfile  alembic.ini  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_create_users.py  0002_create_missions.py
apps/api/app/: config.py  db.py  deps.py  main.py  models.py  schemas.py
apps/api/app/services/: auth.py  missions.py  waypoints.py
apps/api/tests/: test_auth.py  test_health.py  test_missions.py  test_planner.py  test_waypoints.py
apps/web/: Dockerfile  package.json
apps/web/app/: globals.css  layout.tsx
apps/web/app/app/: map-editor.tsx  page.tsx
apps/web/app/login/: page.tsx
apps/web/app/register/: page.tsx
data/exports/: demo_mission.waypoints
geo/: crs.py  utils.py
metrics/: estimates.py
route/: cover_f2c.py  field_nfz.py  fillet.py  landing_and_takeoff.py  ompl_nfz_transit.py  ompl_simple_transit.py  swaths_path.py  transit.py  transit_f2c.py  uturn.py
src/agro/: __init__.py
src/agro/domain/geo/: __init__.py  utils.py
src/agro/domain/metrics/: __init__.py  estimates.py
src/agro/domain/routing/: __init__.py  fillet.py  landing_and_takeoff.py  swaths_path.py  transit.py  uturn.py
src/agro/infra/: __init__.py
src/agro/infra/f2c/: __init__.py  cover_f2c.py
src/agro/infra/ompl/: __init__.py  nfz_transit.py  simple_transit.py
src/agro/services/: exporter.py  mission_builder.py  mission_planner.py  trip_splitter.py
